# Vault

./: CMakeLists.txt  Serializer.hpp  Vault.hpp  main.cpp  vcpkg.json
tests/: CMakeLists.txt  SerializerTests.cpp
